Fixed 'Live Demo' and 'View Code' buttons functionality

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                 <p class="tech-stack">JavaScript, HTML, CSS and API Integration</p>
                 <p>A responsive weather application that displays real-time weather data and forecasts using geolocation.</p>
                 <div class="project-links">
-                    <a href="LIVE_DEMO_LINK" class="project-link" target="_blank">
+                    <a href="http://weather-app-pi-murex-45.vercel.app/" class="project-link" target="_blank">
                         <i class="fas fa-globe"></i> Live Demo
                     </a>
-                    <a href="GITHUB_LINK" class="project-link" target="_blank">
+                    <a href="https://github.com/IsaiahIso/WEATHER-APP.git" class="project-link" target="_blank">
                         <i class="fab fa-github"></i> View Code
                     </a>
                 </div>
@@ -123,10 +123,10 @@
                 <p class="tech-stack">JavaScript, CSS3, HTML5</p>
                 <p>A feature-rich calculator with responsive design.</p>
                 <div class="project-links">
-                    <a href="LIVE_DEMO_LINK" class="project-link" target="_blank">
+                    <a href="https://my-calculator-project-seven.vercel.app/" class="project-link" target="_blank">
                         <i class="fas fa-globe"></i> Live Demo
                     </a>
-                    <a href="GITHUB_LINK" class="project-link" target="_blank">
+                    <a href="https://github.com/IsaiahIso/MY-CALCULATOR-PROJECT.git" class="project-link" target="_blank">
                         <i class="fab fa-github"></i> View Code
                     </a>
                 </div>
@@ -143,10 +143,10 @@
                 <p class="tech-stack">HTML, JavaScript, CSS</p>
                 <p>A complete online store with product listings, cart functionality, user authentication, and payment processing.</p>
                 <div class="project-links">
-                    <a href="LIVE_DEMO_LINK" class="project-link" target="_blank">
+                    <a href="https://proj-umber-six.vercel.app/" class="project-link" target="_blank">
                         <i class="fas fa-globe"></i> Live Demo
                     </a>
-                    <a href="GITHUB_LINK" class="project-link" target="_blank">
+                    <a href="https://github.com/IsaiahIso/proj.git" class="project-link" target="_blank">
                         <i class="fab fa-github"></i> View Code
                     </a>
                 </div>
@@ -165,7 +165,7 @@
             <a href="LIVE_DEMO_LINK" class="project-link" target="_blank">
                 <i class="fas fa-globe"></i> Live Demo
             </a>
-            <a href="GITHUB_LINK" class="project-link" target="_blank">
+            <a href="https://github.com/IsaiahIso/AIRLINES-DELAY-AND-CANCELATION-SYSTEM.git" class="project-link" target="_blank">
                 <i class="fab fa-github"></i> View Code
             </a>
         </div>
